fix: sometimes no wrap causes overflow on screen in mobile devices

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,6 +1,3 @@
 :root {
   --sl-font: "Atkinson Hyperlegible", sans-serif;
 }
-code {
-  white-space: nowrap;
-}
